Fix container align items

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -56,7 +56,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 100%;
   max-width: 1296px;
   margin: 0 auto;
